--- a/src/index.html
+++ b/src/index.html
@@ -1,13 +1,19 @@
 <!doctype html>
-<html lang="en">
+<html lang="pt-BR">
 <head>
   <meta charset="utf-8">
-  <title>Portfolio</title>
+  <title>Ruth Gomes - Full Stack Developer | Consultoria em Desenvolvimento Web</title>
+  <meta name="description" content="Desenvolvedora Full Stack especializada em criar soluções web modernas e escaláveis. Consultoria em Angular, React, Node.js e mais.">
+  <meta name="keywords" content="desenvolvimento web, full stack, angular, react, node.js, consultoria, freelancer">
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800&display=swap" rel="stylesheet">
 </head>
 <body>
   <app-root></app-root>
 </body>
 </html>
+
